# Bash-Script-Maker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.yml  AUTO_RELEASE_GUIDE.md  BRANCH_PROTECTION_CONFIG.md  BRANCH_PROTECTION_SOLUTION.md  CHANGELOG.md  CHANGELOG_AUTOMATION.md  CONTRIBUTING.md  DESKTOP_LAUNCHER_FIX.md  Dockerfile  FLATPAK_DIFFERENCES.md  FLATPAK_GUIDE.md  GITHUB_PACKAGES.md  GITHUB_RELEASES.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PYPI_SETUP.md  README.md  RELEASE_PROCESS.md  RELEASE_WORKFLOW_FIX.md  SECURITY_IMPROVEMENTS.md  VERSION_MANAGEMENT.md  WORKFLOW_BRANCH_PROTECTION_FIX.md  __version__.py  assets.py  bash-script-maker.desktop  bash_script_maker.py  bash_script_maker_flatpak.py  beispiel_script.sh  build_flatpak.sh  compile_translations.py  config.ini  create_release.sh  custom_dialogs.py  dev-requirements.txt  generate_changelog_entry.py  generate_icons.py  (+22 more)
.github/: FUNDING.yml  codeql-config.yml
.github/workflows/: auto-release-on-push.yml  auto-release.yml  ci-cd.yml  cleanup-caches.yml  codacy.yml  codeql-analysis.yml  codeql-simple.yml  flatpak-build-simple.yml  flatpak-build.yml  manual-release.yml  pyproject.toml  semantic-release.yml
flatpak/: org.securebits.bashscriptmaker.appdata.xml  org.securebits.bashscriptmaker.full.yml  org.securebits.bashscriptmaker.yml
locales/de/LC_MESSAGES/: base.po
locales/en/LC_MESSAGES/: base.po
tests/: __init__.py  test_basic.py
