[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
branch = "main"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
commit_message = "chore(release): bump version to {version}"
tag_format = "v{version}"

[tool.semantic_release.version]
source = "file"
path = "VERSION"

[tool.semantic_release.commit_parser]
major_on_breaking = true
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]

[tool.semantic_release.build]
build_command = "pip install build && python -m build"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"


[project]
name = "bash-script-maker"
dynamic = ["version"]
description = "Ein GUI-Programm zur Erstellung von Bash-Scripts mit visueller Unterstützung"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Marcel", email = "support@secure-bits.org"},
]
maintainers = [
    {name = "Marcel", email = "support@secure-bits.org"},
]
keywords = ["bash", "script", "gui", "editor", "generator", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",

    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "flake8>=3.8.0",
    "black>=21.0.0",
    "mypy>=0.800",
    "tox>=3.20.0",
    "twine>=3.0.0",
    "build>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/securebitsorg/bash-script-maker"
Documentation = "https://github.com/securebitsorg/bash-script-maker#readme"
Repository = "https://github.com/securebitsorg/bash-script-maker"
"Bug Reports" = "https://github.com/securebitsorg/bash-script-maker/issues"
Changelog = "https://github.com/securebitsorg/bash-script-maker/blob/main/CHANGELOG.md"

[project.scripts]
bash-script-maker = "bash_script_maker:main"

[tool.setuptools]
py-modules = ["bash_script_maker", "syntax_highlighter"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "tkinter.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --disable-warnings --cov=bash_script_maker --cov=syntax_highlighter --cov-report=xml --cov-report=term"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["bash_script_maker", "syntax_highlighter"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
